[Bernard] Fix overflowing title in item card

--- a/src/Components/ItemCard/ItemCard.css
+++ b/src/Components/ItemCard/ItemCard.css
@@ -17,6 +17,7 @@
   margin: 10px 0;
   height: 75px;
   text-transform: capitalize;
+  overflow: hidden;
 }
 
 .item-card .item-price{
